src/styles/header+navbar.css
/* font imports  */

@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Arimo&display=swap');

/* global vars */

:root {
    --noto-sans: 'Noto Sans', sans-serif;
    --lobster: 'Lobster', cursive;
    --arimo: 'Arimo', sans-serif;
    --primary-logo-color: #01b2d7;
    --secondary-logo-color: #6c19ff;
    --rad: 4px;
    --dur: .3s;
    --color-dark: #2f2f2f;
    --color-light: #fff;
    --height: 5rem;
    --btn-width: 4rem;
    --bez: cubic-bezier(0, 0, 0.43, 1.49);
  }

/* header section  */

.header-container {
    display: flex;
    align-items: center;
    justify-content: center;
}

.logo-container {
    display: flex;
    align-items: center;
    margin: auto;
    transform: translate(62px);
    cursor: pointer;
}

/* re order header under 640px width */
@media screen and (max-width: 640px) {
  .header-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  .logo-container {
    margin: 0;
    transform: unset;
    padding-left: 1em;
  }
}

.header-text-news {
    font-family: var(--noto-sans);
    font-size: 2rem;
}

.header-text-tube {
    font-family: var(--lobster);
    font-size: 1.6rem;
    background: -webkit-linear-gradient(right, var(--primary-logo-color), var(--secondary-logo-color));
    -webkit-background-clip: text;
    background-clip: text;
    -webkit-text-fill-color: transparent;
    margin-left: 0.3em;
    margin-bottom: 0.85em;
}

/* make logo smaller under 425px width */
@media screen and (max-width: 425px) {
  .header-text-news {
    font-size: 1.4rem;
  }

  .header-text-tube {
    font-size: 1rem;
  }

  .news-icon {
    width: 3.5em;
  }
}

/* theme toggle section  */

:root {
    /** sunny side **/
    --blue-background: #C2E9F6;
    --blue-border: #72cce3;
    --blue-color: #96dcee;
    --yellow-background: #fffaa8;
    --yellow-border: #f5eb71;
    /** dark side **/
    --indigo-background: #808fc7;
    --indigo-border: #5d6baa;
    --indigo-color: #6b7abb;
    --gray-border: #e8e8ea;
    --gray-dots: #e8e8ea;
    /** general **/
    --white: #fff;
  }

  .toggle-container {
    padding-right: 1em;
  }
  
  .toggle--checkbox {
    display: none;
  }

  .toggle--checkbox:checked ~ .background {
    background: var(--indigo-background);
  }

  .toggle--checkbox:checked + .toggle--label {
    background: var(--indigo-color);
    border-color: var(--indigo-border);
    /** Change the cloud to stars **/
    /** Change the sun into the moon **/
    /** Show the dimples on the moon **/
  }

  .toggle--checkbox:checked + .toggle--label .toggle--label-background {
    left: 30px;
    width: 5px;
  }

  .toggle--checkbox:checked + .toggle--label .toggle--label-background:before {
    width: 5px;
    height: 5px;
    top: -15px;
    left: -12px;
  }

  .toggle--checkbox:checked + .toggle--label .toggle--label-background:after {
    width: 5px;
    height: 5px;
    left: -12px;
    top: 10px;
  }

  .toggle--checkbox:checked + .toggle--label:before {
    background: var(--white);
    border-color: var(--gray-border);
    animation-name: switch;
    animation-duration: 350ms;
    animation-fill-mode: forwards;
  }

  .toggle--checkbox:checked + .toggle--label:after {
  /*   transition-delay: 350ms; */
    opacity: 1;
    left: 80px;
    top: 10px;
  }

  .toggle--label {
    /** Placeholder element, starting at blue **/
    width: 100px;
    height: 50px;
    background: var(--blue-color);
    border-radius: 100px;
    border: 5px solid var(--blue-border);
    display: flex;
    position: relative;
    transition: all 350ms ease-in;
    overflow: hidden;
    cursor: pointer;
    /** The sun cloud and moon stars **/
    /** Sun/Moon element **/
    /** Gray dots on the moon **/
  }

  .toggle--label-background {
    width: 7px;
    height: 5px;
    border-radius: 5px;
    position: relative;
    background: var(--white);
    left: 70px;
    top: 25px;
    transition: all 150ms ease-in;
  }

  .toggle--label-background:before {
    content: "";
    position: absolute;
    top: -5px;
    width: 20px;
    height: 5px;
    border-radius: 5px;
    background: var(--white);
    left: -3px;
    transition: all 150ms ease-in;
  }

  .toggle--label-background:after {
    content: "";
    position: absolute;
    top: 5px;
    width: 20px;
    height: 5px;
    border-radius: 5px;
    background: var(--white);
    left: -10px;
    transition: all 150ms ease-in;
  }

  .toggle--label:before {
    animation-name: reverse;
    animation-duration: 350ms;
    animation-fill-mode: forwards;
    transition: all 350ms ease-in;
    content: "";
    width: 40px;
    height: 38px;
    border: 5px solid var(--yellow-border);
  /*   top: 4px; */
    left: 4px;
    position: absolute;
    border-radius: 82px;
    background: var(--yellow-background);
  }

  .toggle--label:after {
    transition-delay: 0ms;
    transition: all 250ms ease-in;
    position: absolute;
    content: "";
    box-shadow: var(--gray-dots) -13px 0 0 2px, var(--gray-dots) -24px 14px 0 -2px;
    left: 143px;
    top: 23px;
    width: 10px;
    height: 10px;
    background: transparent;
    border-radius: 50%;
    opacity: 0;
  }
  
  @keyframes switch {
    0% {
      left: 4px;
    }
    60% {
      left: 4px;
      width: 56px;
    }
    100% {
      left: 46px;
      width: 41px;
    }
  }

  @keyframes reverse {
    0% {
      left: 46px;
      width: 41px;
    }
    60% {
      left: 36px;
      width: 56px;
    }
    100% {
      left: 4px;
    }
  }

/* navbar section  */

.navbar-container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 2em;
    border: 2px solid;
    border-left: transparent;
    border-right: transparent;
}

.category-selector-container {
    order: 1;
}

.category-selector {
    align-self: center;
    height: 3em;
    font-family: var(--arimo) !important;
}

.search-form {
    position: relative;
    width: 15em;
    background: var(--primary-logo-color);
    border-radius: var(--rad);
    border: 1px solid lightgray;
}

/* make inputs shorter under 425px width */
@media screen and (max-width: 425px) {
  .category-selector {
    width: 6.86em;
  }

  .search-form {
    width: 10em;
  }
}

.search-input, button {
    height: var(--height);
    font-family: var(--arimo);
    border: 0;
    color: var(--color-dark);
    font-size: 1.2rem;
    height: 2.4em;
}

.search-input[type="search"] {
    outline: 0;
    width: 100%;
    background: var(--color-light);
    padding: 0 0.5em 0 1em;
    border-radius: var(--rad);
    appearance: none;
    transition: all var(--dur) var(--bez);
    transition-property: width, border-radius;
    z-index: 1;
    position: relative;
}

.search-input[type="search"]::-webkit-search-cancel-button {
    -webkit-appearance: none;
    margin-left: 0.5em;
    cursor: pointer;
}

.search-btn {
    display: none;
    position: absolute;
    top: 0;
    right: 0;
    width: var(--btn-width);
    cursor: pointer;
    border-radius: 0 var(--rad) var(--rad) 0;
}

.search-input:not(:placeholder-shown) {
    border-radius: var(--rad) 0 0 var(--rad);
    width: calc(100% - var(--btn-width));
}

.search-input:not(:placeholder-shown) + .search-btn {
    display: block;
}

/* change search btn size under 425px width */
@media screen and (max-width: 425px) {
  .search-btn {
    display: none;
    width: 2.2em !important;
  }

  .search-input:not(:placeholder-shown) {
    width: calc(100% - 2.2em) !important
  }

  .search-input, button {
    width: unset;
  }
}

